manifests/calculator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-service
  namespace: calculator
spec:
  selector:
    app: calculator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
