manifests/calculator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  namespace: calculator
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik 
  tls:
  - hosts:
    - calculator.k5sha.com
  rules:
  - host: calculator.k5sha.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calculator-service
            port:
              number: 80
